# sam9x60_opcua_demo

./: README.md
opcua/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
opcua/src/: OPCUA_gateway.cpp  OPC_Server_MODBUS_Client.cpp  button_control_I2C_setting_Fan.cpp  client_MODBUS_TCP.cpp  gpio_control.cpp  modbus_ex.h  modbus_masterWithEMC2305.c  modbus_slaveWithEMC2305.c  server_MODBUS_TCP_with_Fan_control.cpp  tutorial_server_object.c
ttyS2_pd3pd4/: at91-sama5d27_som1_ek.dts
ttyS3_flexcom/: at91-sama5d27_som1_ek.dts
